state after introducing new book form

--- a/src/_bootstrap/stylesheets/main.scss
+++ b/src/_bootstrap/stylesheets/main.scss
@@ -1,2 +1,14 @@
 //imports only
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+form input.ng-invalid.ng-dirty {
+  background-color: #ffcbc1;
+}
+
+form input.ng-invalid:focus {
+  outline-color: red;
+}
+
+form input.ng-valid.ng-dirty {
+  background-color: #1dca07;
+}
